manifests/ingress/let's encrypt/docs/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
  annotations:
    # Configure Traefik to use the Kubernetes ingress class
    kubernetes.io/ingress.class: traefik
    # Enable TLS for this ingress
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  # Define TLS settings for the ingress
  tls:
    - hosts:
        - sandbox.example.com
      # Use the Let's Encrypt certificate obtained by cert-manager
      secretName: sandbox-tls
  # Define rules for the ingress
  rules:
    - host: sandbox.example.com
      # Define paths and corresponding backend services
      http:
        paths:
          - path: /sandbox-service
            pathType: Prefix
            backend:
              service:
                name: sandox-service
                port:
                  name: http
          - path: /sandbox-second-service
            pathType: Prefix
            backend:
              service:
                name: sandbox-second-service
                port:
                  name: http
